add_library("20210919_Remove_Duplicates_from_Sorted_Array_II" solution.cpp)

add_executable("20210919_Remove_Duplicates_from_Sorted_Array_II_Test" solution_test.cpp)
target_link_libraries("20210919_Remove_Duplicates_from_Sorted_Array_II_Test" PRIVATE "20210919_Remove_Duplicates_from_Sorted_Array_II" GTest::gtest GTest::gtest_main)